@@ -1,5 +1,6 @@
 2008-07-02  Perry McFarlane  <perry_m@fastmail.fm>
 * javanvm/atari_javanvm.c: compile without SOUND
+* atari_sdl.c: name changes
 
 
 2008-06-30  Perry McFarlane  <perry_m@fastmail.fm>
